--- a/mamba-fps/src/main/res/layout/activity_fps.xml
+++ b/mamba-fps/src/main/res/layout/activity_fps.xml
@@ -8,7 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:textColor="@android:color/holo_red_light"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/fpsStart"
